tdf#131184 Allow comparing text ranges in table with body text

Change-Id: I191d8778d362cd28474eea6d18bfe40044887e30